# Zed_3D_Detection

./: .gitignore  README.md  package.xml
config/: topics.yaml
docker/: DOCKERFILE
flash_experiment/: CMakeLists.txt  Dockerfile  Experiment.md
flash_experiment/include/: benchmarks.hpp  input_output_op.hpp  logger.hpp  ml_write_op.hpp  onnx_op.hpp
flash_experiment/python/: benchmark.py  generate_oonx.py  plot_results.py  requirements.txt  shard_memory_model.py  test_model.py
flash_experiment/src/: main.cpp
msg/: Object.msg
src/: 3d_detection.cpp  algorithm.py
src/kernels/: backProjection.cu
src/kernels/include/: backProjection.cuh
